--- a/Table_067.html
+++ b/Table_067.html
@@ -98,7 +98,7 @@
     </tr>
     <tr>
       <td>
-        <p style="font-size: 14px;font-weight: lighter; color: #38460c; padding-left: 125px;">HTML CSS CC A11y GH</p>
+        <p style="font-size: 14px;font-weight: lighter; color: #38460c; padding-left: 125px;">HTML CSS CC A11y GH.</p>
       </td>
     </tr>
   </table>
